# imgui-sfml-template

./: CMakeLists.txt
app/: main.cpp
cmake/: CMakeOptions.cmake  dependencies.cmake
